Fix sidbar alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,19 @@
 .signup-page {
-  margin-top: 9rem;
+  width: 100%;
+  height: 100%;
 }
 
 .login-page {
-  margin-top: 6rem;
+  width: 100%;
+  height: 100%;
 }
 
 .home {
-  margin: 2rem 26rem 0rem 26rem;
   display: flex;
   flex-direction: column;
+}
+
+.input {
+  display: flex;
+  justify-content: center;
 }
